# rubik-cube-env

./: README  README.md  REDME.md  pylint.rc  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: build.yaml
cube_env/: cube.py  rubik_env.py
cube_env/helpers/: graph.py  heap.py  priority_queue.py  range_min.py  stack.py  utils.py
cube_env/render/: anim.html  color_cube.js  cube.css  cube.html  cube.ico:Zone.Identifier  cube.js  index.html  render.py  style.css
docs/: dev.md
src/main/api/: data_models.sql  db.py  render.py  routes.py
src/main/core/: consts.py  cube.py  solver.py
src/main/ui/: cube.js  index.html  solver.js  style.css
src/test/: cube_test.py  solver_test.py
test/: test_graph.py  test_heap.py  test_queue.py  test_rubik_env.py  test_seg_tree.py  test_stack.py
tests/: cube_test.py
