[project]
name = "rubik-cube-env"
version = "0.1.0"
description = "Rubik Cube Environment"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "redis",
    "magiccube>=1.2.0",
    "rubik-solver>=0.2.0",
    "zombie-imp>=0.0.4",
    "rubiktwophase>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
]
