[project]
name = "rubik-cube-env"
version = "0.1.0"
description = "Rubik Cube Environment"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "redis",
    "rubiktwophase>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
]
