[project]
name = "rubik-cube-env"
version = "0.1.0"
description = "Rubik Cube Environment"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "redis",
    "rubiktwophase>=1.1.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
]
